[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pump-it-up"
version = "0.1.0"
description = "Tanzania water pump failure prediction — SIA consultancy case"
requires-python = ">=3.11"
dependencies = [
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    # ML
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "shap>=0.45",
    # Config & validation
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    # CLI
    "typer>=0.12",
    # Persistence
    "joblib>=1.3",
    # Visualizations
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "folium>=0.16",       # Tanzania map
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "pandas-stubs>=2.2",
]

[project.scripts]
pump = "pump.main:app"   # lets you run `pump train` after pip install -e .

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]   # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["pump"]

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true   # third-party stubs not always available
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["xgboost.*", "lightgbm.*", "shap.*", "folium.*", "plotly.*"]
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pump --cov-report=term-missing"
